docs/아키텍처/version1.0/아키텍처.md
# 아키텍처 — AlphaStack

> 작성 2026-08-25 (저장소 이관 세션) · 변경 시 [ADR](../../decisions/) 을 함께 남깁니다

---

## 1. 한눈에

```
                  ┌─────────────────────────────────────────┐
                  │  외부 세계                               │
                  │  KRX · DART · ECOS · FRED · yfinance     │
                  └────────────────┬────────────────────────┘
                                   │ urllib (표준 라이브러리만)
                  ┌────────────────▼────────────────────────┐
   ingest/        │  clients/   응답을 정규화한다             │
                  │  store/     Postgres·SQLite 에 넣고 꺼낸다│
                  └────────────────┬────────────────────────┘
                                   │ 정규화된 시세
                  ┌────────────────▼────────────────────────┐
   features/      │  기술적 지표 계산 → 학습 가능한 표 X, y   │
                  └────────────────┬────────────────────────┘
                                   │ X, y
                  ┌────────────────▼────────────────────────┐
   models/        │  RF · XGBoost · LightGBM → 예측 방향      │
                  └────────────────┬────────────────────────┘
                                   │ positions, returns
                  ┌────────────────▼────────────────────────┐
   evaluation/ ★  │  워크포워드 분할 · MDD · Sharpe · 비용    │
                  │  기준선 3종과 나란히 보고한다             │
                  └────────────────┬────────────────────────┘
                                   │ 성과 요약
                  ┌────────────────▼────────────────────────┐
   api/           │  최소 HTTP 계약 (+ Swagger 자동 생성)     │
                  └─────────────────────────────────────────┘

   common/        설정 · 경로 · 자격증명 · 거래일    (모든 층이 쓴다)
   timeseries/    ARIMA · ADF · ACF/PACF            (분류기와 겨루는 기준선)
```

---

## 2. 의존 방향 — 아래로만 흐른다

`common` → `ingest` → `features` → `models` → `evaluation` → `api`

### 지켜야 할 두 규칙

**① `common/` 은 아무것도 import 하지 않는다.**
그래서 순환 import 가 구조적으로 생길 수 없습니다. 새 모듈을 `common/` 에 넣을 때
이것부터 확인합니다.

**② `evaluation/` 은 `models/` 를 import 하지 않는다.** ★

이게 이 저장소에서 가장 중요한 제약입니다. `evaluation` 이 받는 것은 배열 둘뿐입니다.

```python
positions   # 각 시점의 포지션 (+1 매수 / 0 현금 / -1 매도)
returns     # 각 시점 자산 자체의 수익률
```

무엇이 그 포지션을 만들었는지 모릅니다. 1차의 LightGBM 이든, 2차의 자산배분 규칙이든,
3차의 커스텀 지표든 같은 함수가 돕니다. **이 무지(無知)가 재사용의 조건입니다.**

> `evaluation` 안에서 `models` 를 import 하고 싶어지면 설계가 틀어진 신호입니다.
> import 를 추가하지 말고 **함수 인자를 늘립니다.**

---

## 3. 왜 이 구조인가

### 3.1 팀 이름이 적층(積層)인 이유

| 차수 | 주제 | 새로 만드는 것 | 재는 방법 |
|---|---|---|---|
| 1차 | 머신러닝·딥러닝 | 분류기 | 워크포워드 · MDD · Sharpe |
| 2차 | 로보 어드바이저 | 자산배분 | **같음** |
| 3차 | 투자 인디케이터 | 지표 | **같음** |

셋 다 "개발 및 성과 검증"으로 끝납니다. 앞쪽만 바뀌고 뒤쪽은 그대로입니다.
그래서 뒤쪽을 **처음부터 독립 패키지로** 떼어 둡니다.

검증 코드를 노트북 셀에 흩어 놓으면 1차는 통과하고 2차에 전부 다시 짜게 됩니다.
**6주 전체 비용을 결정하는 것이 이 하나의 결정입니다.**

### 3.2 `timeseries/` 는 왜 사슬 밖에 있나

`timeseries/` 는 `features → models → evaluation` 사슬의 일부가 아니라 **나란히** 섭니다.
두 가지 몫이 있습니다.

1. **⑨ 정상성 검정** — ADF 가 이미 구현되어 있습니다
2. **통계적 기준선** — ARIMA 가 우리 트리 모델과 겨룰 상대입니다.
   트리 모델이 ARIMA 를 못 이기면 그 사실이 결과의 일부입니다

### 3.3 `timeseries.backtest` 와 `evaluation.walk_forward` 는 다르다

이름이 비슷해서 헷갈리기 쉽습니다.

| | 받는 것 | 하는 일 | 쓸 수 있는 곳 |
|---|---|---|---|
| `timeseries.backtest` | 가격 배열 | ARIMA 를 다시 적합하고 rmse·mae 측정 | **ARIMA 전용** |
| `evaluation.walk_forward` | 표본 수 | 인덱스 쌍만 돌려줌 | **모델 불문** |
| `evaluation.metrics` | 포지션·수익률 | MDD·Sharpe·비용 | **모델 불문** |

`timeseries.backtest` 는 ARIMA 적합 코드가 안에 박혀 있어 트리 모델에 그대로 쓸 수
없습니다. 그래서 `evaluation/` 을 따로 두되, **설계 원칙 — 확장창을 쓸 것, 기준선과
반드시 함께 잴 것 — 은 그대로 물려받았습니다.**

---

## 4. 원본에서 무엇을 가져오고 무엇을 버렸나

원본은 이동원 개인 프로젝트 `data-service` 입니다. 리서치 리포트 생성까지 하는 더 큰
서비스라 **1차 범위에 필요한 것만 골랐습니다.**

### 가져온 것

| 새 위치 | 원본 | 줄수 | 왜 |
|---|---|---|---|
| `common/` | `app/core/` (6/8파일) | 1,360 | 설정·경로·자격증명·거래일 |
| `ingest/clients/` | `app/clients/` (전부) | 3,978 | 외부 API 9종. 크롤링 검수 담당의 작업 영역 |
| `ingest/store/` | `app/repositories/` (5/11) | 1,612 | krx 계열 + tmp_cache |
| `timeseries/` | `app/services/timeseries/` | 2,063 | ARIMA·ADF·워크포워드 |
| `scripts/` | `scripts/` (2/18) | 532 | 수집·유니버스 구축 |
| `sql/init/` | `sql/init/` (2/3) | 250 | 스키마 (clip 제외) |

### 버린 것과 이유

| 버린 것 | 규모 | 왜 |
|---|---|---|
| `app/services/research/` | 24파일 11,241줄 | 리포트 생성기. 1차 범위 밖 |
| `app/routers/` | 17파일 · 엔드포인트 64개 | 쓰지 않는 엔드포인트는 유지 비용만 만든다 |
| `app/main.py` · `app/core/api_docs.py` | | 위와 함께. 최소 API 를 새로 정의한다 |
| `app/core/parallel.py` | 117줄 | research 전용이었다 |
| `repositories/clip_store` 등 6파일 | 2,025줄 | 스크랩·리포트·사용자 — 1차 범위 밖 |
| `sql/init/03-clip.sql` | 105줄 | 대응 코드를 가져오지 않았다 |

### 구조를 왜 바꿨나

원본은 `app/core` · `app/clients` · `app/repositories` · `app/services/*` 구조입니다.
그대로 두면 이관은 쉽지만 **1차 프로젝트의 목적이 구조에 드러나지 않습니다.**

특히 `evaluation` 을 `app/services/` 안에 묻으면 "2·3차가 그대로 가져다 쓴다"는
의도가 사라집니다. 그래서 목적에 맞게 다시 짰습니다.

⚠️ 대가: 원본과 코드를 주고받을 때 import 경로를 손으로 번역해야 합니다.
그 비용을 알고 택했습니다.

---

## 5. 데이터 흐름 — 한 번의 예측이 지나는 길

```
1. scripts/fetch_krx.py
      KRX OpenAPI → 없는 날짜만 수집 → ingest/store

2. ingest/store/krx_store.py
      STORE_BACKEND 에 따라 Postgres 또는 SQLite 에서 읽는다

3. features/  (미구현)
      시세 → 기술적 지표 → X, y
      ⚠️ t 행은 t 시점까지의 자료만 쓴다 (look-ahead 금지)

4. evaluation/walk_forward.py
      확장창 또는 롤링창으로 폴드를 만든다
      ⚠️ 레이블이 k 일 앞을 보면 gap=k

5. models/  (미구현)
      폴드마다 학습 → 예측 방향
      ⚠️ 스케일링·하이퍼파라미터 탐색도 폴드 안에서

6. evaluation/metrics.py
      예측 → 포지션 (한 칸 밀어서!) → 거래비용 차감 → MDD·Sharpe

7. evaluation/baseline.py
      기준선 3종을 같은 폴드에서 계산해 나란히 놓는다

8. api/  (미구현)
      결과를 HTTP 로. Swagger 자동 생성
```

### 이 길에서 조용히 틀리는 세 곳

| 단계 | 사고 | 증상 |
|---|---|---|
| 3 | 지표가 미래를 참조 | 성능이 부풀어 오른다. **에러 없음** |
| 4 | `gap` 미설정 | 레이블이 학습에 샌다. **에러 없음** |
| 6 | 포지션을 안 밀음 | 정확도 60%가 연 300%를 번다. **에러 없음** |

셋 다 예외가 나지 않습니다. **테스트와 코드 리뷰가 유일한 안전망입니다.**

---

## 6. 실행 환경

### 로컬이 기본

| 작업 | 실행처 | 근거 |
|---|---|---|
| LightGBM 학습·그리드 | **로컬** | 배포판이 GPU 빌드가 아니다. 코어 수만 좌우 |
| sklearn RF·보정·bootstrap | **로컬** | CPU 경로 |
| 전처리·피처·EDA | **로컬** | I/O 바운드이고 원자료가 로컬에 있다 |
| 딥러닝(⑥) | Colab Pro | GPU 이득이 실재 |

로컬은 22코어입니다. CPU 바운드 작업에서 Colab 런타임보다 빠릅니다.
**"Colab 이니까 빠르겠지"로 판단하지 않습니다.**

### 코드는 언제나 로컬이 정본

Colab 에서 고쳤으면 곧바로 로컬 파일에 되씁니다. Colab VM 안에만 남은 결과물은
런타임이 끊기면 사라지고 git 이력과 갈라집니다.

원자료는 Colab 에 올리지 않습니다. 전처리를 로컬에서 마친 뒤 **학습에 필요한 최소
컬럼만** 내보냅니다.

---

## 7. 아직 정해지지 않은 것

이 문서가 확정하지 못한 것들입니다. 정해지면 여기와 ADR 을 함께 갱신합니다.

- 저장소를 팀 Supabase 로 할 것인가, 스키마는 그대로인가
- `ingest/store` 의 SQLite·Postgres 이중 경로를 유지할 것인가
- 대시보드가 `api/` 를 부를 것인가, 결과 파일을 직접 읽을 것인가
- `pipelines/` 의 진입점을 어떤 모양으로 할 것인가 (CLI · invoke · make)

👉 [docs/회의안건/2026-09-01-킥오프.md](../../회의안건/2026-09-01-킥오프.md)
