docs/아키텍처/version1.1/아키텍처.md
# 아키텍처 — AlphaStack

> v1.1 · 2026-08-29 · 변경 시 [ADR](../../decisions/) 을 함께 남깁니다
> [v1.0 → v1.1 변경사항](변경사항.md)

---

## 1. 한눈에

```
                  ┌─────────────────────────────────────────┐
                  │  외부 세계                               │
                  │  KRX · DART · ECOS · FRED · 뉴스 · 동영상 │
                  └────────────────┬────────────────────────┘
                                   │ urllib (표준 라이브러리만)
                  ┌────────────────▼────────────────────────┐
   ingest/        │  clients/   응답을 정규화한다             │
   (internal)     │  store/     SQLite 하나에 넣고 꺼낸다     │
                  └────────────────┬────────────────────────┘
                                   │
        ╔══════════════════════════▼══════════════════════════╗
        ║  supply/  ★ as_of 정문                              ║
        ║                                                     ║
        ║  이 문을 지나야만 자료를 꺼낼 수 있다.               ║
        ║  as_of 에 기본값이 없어서 빠뜨릴 수가 없다.          ║
        ║  문을 우회하는 import 는 테스트가 막는다.            ║
        ╚══════════════════════════┬══════════════════════════╝
                                   │ "그때 알 수 있었던" 시세만
                  ┌────────────────▼────────────────────────┐
   features/      │  기술적 지표 계산 → 학습 가능한 표 X, y   │
                  └────────────────┬────────────────────────┘
                                   │ X, y
                  ┌────────────────▼────────────────────────┐
   models/        │  LogReg · RF · XGBoost · LightGBM        │
                  └────────────────┬────────────────────────┘
                                   │ positions, returns
                  ┌────────────────▼────────────────────────┐
   evaluation/ ★  │  워크포워드 분할 · MDD · Sharpe · 비용    │
                  │  기준선 3종과 나란히 보고한다             │
                  └────────────────┬────────────────────────┘
                                   │ 성과 JSON · parquet
                  ┌────────────────▼────────────────────────┐
   화면           │  Streamlit — 산출된 파일을 읽어 그린다    │
                  │  모델을 부르지 않는다 (시연 안정성)       │
                  └─────────────────────────────────────────┘

   common/        설정 · 경로 · 자격증명 · 거래일 · 예산 · robots  (모든 층이 쓴다)
   timeseries/    ARIMA · ADF · ACF/PACF                (분류기와 겨루는 기준선)
```

> 그림 파일: [계층 아키텍처](계층아키텍처.mmd) · [역할별 파이프라인](역할파이프라인.mmd)
> (`.png` 는 같은 폴더에 함께 둡니다. mermaid 원문이 정본이고 그림은 그것으로 굽습니다.)

---

## 2. 의존 방향 — 아래로만 흐른다

`common` → `ingest` → **`supply`** → `features` → `models` → `evaluation` → 화면

### 지켜야 할 세 규칙

**① `common/` 은 아무것도 import 하지 않는다.**
그래서 순환 import 가 구조적으로 생길 수 없습니다. 새 모듈을 `common/` 에 넣을 때
이것부터 확인합니다.

**② `evaluation/` 은 `models/` 를 import 하지 않는다.** ★

이게 이 저장소에서 가장 중요한 제약입니다. `evaluation` 이 받는 것은 배열 둘뿐입니다.

```python
positions   # 각 시점의 포지션 (+1 매수 / 0 현금 / -1 매도)
returns     # 각 시점 자산 자체의 수익률
```

무엇이 그 포지션을 만들었는지 모릅니다. 1차의 LightGBM 이든, 2차의 자산배분 규칙이든,
3차의 커스텀 지표든 같은 함수가 돕니다. **이 무지(無知)가 재사용의 조건입니다.**

> `evaluation` 안에서 `models` 를 import 하고 싶어지면 설계가 틀어진 신호입니다.
> import 를 추가하지 말고 **함수 인자를 늘립니다.**

**③ 소비 계층은 `ingest` 를 직접 import 하지 않는다.** ★★ *(v1.1 신설)*

`features` · `models` · `evaluation` · `timeseries` 는 저장소를 직접 부르지 않습니다.
자료는 **`supply/` 정문**으로만 꺼냅니다.

```python
from supply import index_series
rows = index_series(as_of="2020-06-30")   # as_of 를 빼면 AsOfRequired
```

`as_of` 에 **기본값이 없습니다.** 그래서 빠뜨릴 수가 없습니다. 그리고
`tests/test_supply_boundary.py`(16개)가 경계를 넘는 import 를 **테스트로 막습니다.**

> ⚠️ **이 테스트가 금지하는 것은 `ingest` 문자열 하나뿐입니다.** 소비 계층이
> `import sqlite3` + `common.paths.krx_db_path()` 로 생 SQL 을 던지면 통과합니다.
> 규약이 코드로 완전히 강제되지는 않는다는 뜻이고, 알고 있는 구멍입니다.

---

## 3. 왜 이 구조인가

### 3.1 팀 이름이 적층(積層)인 이유

| 차수 | 주제 | 새로 만드는 것 | 재는 방법 |
|---|---|---|---|
| 1차 | 머신러닝·딥러닝 | 분류기 | 워크포워드 · MDD · Sharpe |
| 2차 | 로보 어드바이저 | 자산배분 | **같음** |
| 3차 | 투자 인디케이터 | 지표 | **같음** |

셋 다 "개발 및 성과 검증"으로 끝납니다. 앞쪽만 바뀌고 뒤쪽은 그대로입니다.
그래서 뒤쪽을 **처음부터 독립 패키지로** 떼어 둡니다.

검증 코드를 노트북 셀에 흩어 놓으면 1차는 통과하고 2차에 전부 다시 짜게 됩니다.
**6주 전체 비용을 결정하는 것이 이 하나의 결정입니다.**

### 3.2 `timeseries/` 는 왜 사슬 밖에 있나

`timeseries/` 는 `features → models → evaluation` 사슬의 일부가 아니라 **나란히** 섭니다.
두 가지 몫이 있습니다.

1. **⑨ 정상성 검정** — ADF 가 이미 구현되어 있습니다
2. **통계적 기준선** — ARIMA 가 우리 트리 모델과 겨룰 상대입니다.
   트리 모델이 ARIMA 를 못 이기면 그 사실이 결과의 일부입니다

### 3.3 `timeseries.backtest` 와 `evaluation.walk_forward` 는 다르다

이름이 비슷해서 헷갈리기 쉽습니다.

| | 받는 것 | 하는 일 | 쓸 수 있는 곳 |
|---|---|---|---|
| `timeseries.backtest` | 가격 배열 | ARIMA 를 다시 적합하고 rmse·mae 측정 | **ARIMA 전용** |
| `evaluation.walk_forward` | 표본 수 | 인덱스 쌍만 돌려줌 | **모델 불문** |
| `evaluation.metrics` | 포지션·수익률 | MDD·Sharpe·비용 | **모델 불문** |

`timeseries.backtest` 는 ARIMA 적합 코드가 안에 박혀 있어 트리 모델에 그대로 쓸 수
없습니다. 그래서 `evaluation/` 을 따로 두되, **설계 원칙 — 확장창을 쓸 것, 기준선과
반드시 함께 잴 것 — 은 그대로 물려받았습니다.**

---

## 4. 원본에서 무엇을 가져오고 무엇을 버렸나

원본은 이동원 개인 프로젝트 `data-service` 입니다. 리서치 리포트 생성까지 하는 더 큰
서비스라 **1차 범위에 필요한 것만 골랐습니다.**

### 가져온 것

| 새 위치 | 원본 | 줄수 | 왜 |
|---|---|---|---|
| `common/` | `app/core/` (6/8파일) | 1,360 | 설정·경로·자격증명·거래일 |
| `ingest/clients/` | `app/clients/` (전부) | 3,978 | 외부 API 9종. 크롤링 검수 담당의 작업 영역 |
| `ingest/store/` | `app/repositories/` (5/11) | 1,612 | krx 계열 + tmp_cache |
| `timeseries/` | `app/services/timeseries/` | 2,063 | ARIMA·ADF·워크포워드 |
| `scripts/` | `scripts/` (2/18) | 532 | 수집·유니버스 구축 |
| `sql/init/` | `sql/init/` (2/3) | 250 | 스키마 (clip 제외) |

### 버린 것과 이유

| 버린 것 | 규모 | 왜 |
|---|---|---|
| `app/services/research/` | 24파일 11,241줄 | 리포트 생성기. 1차 범위 밖 |
| `app/routers/` | 17파일 · 엔드포인트 64개 | 쓰지 않는 엔드포인트는 유지 비용만 만든다 |
| `app/main.py` · `app/core/api_docs.py` | | 위와 함께. 최소 API 를 새로 정의한다 |
| `app/core/parallel.py` | 117줄 | research 전용이었다 |
| `repositories/clip_store` 등 6파일 | 2,025줄 | 스크랩·리포트·사용자 — 1차 범위 밖 |
| `sql/init/03-clip.sql` | 105줄 | 대응 코드를 가져오지 않았다 |

### 구조를 왜 바꿨나

원본은 `app/core` · `app/clients` · `app/repositories` · `app/services/*` 구조입니다.
그대로 두면 이관은 쉽지만 **1차 프로젝트의 목적이 구조에 드러나지 않습니다.**

특히 `evaluation` 을 `app/services/` 안에 묻으면 "2·3차가 그대로 가져다 쓴다"는
의도가 사라집니다. 그래서 목적에 맞게 다시 짰습니다.

⚠️ 대가: 원본과 코드를 주고받을 때 import 경로를 손으로 번역해야 합니다.
그 비용을 알고 택했습니다.

---

## 5. 데이터 흐름 — 한 번의 예측이 지나는 길

```
1. scripts/fetch_krx.py
      KRX OpenAPI → 없는 날짜만 수집 → ingest/store
      원문 bytes 를 그대로 보존한다 (하루 약 58KB)

2. ingest/store/krx_store.py   ← internal. 소비 계층은 여기를 부르지 않는다
      SQLite 하나에 넣고 꺼낸다

3. supply/  ★ as_of 정문
      "그때 알 수 있었던" 행만 통과시킨다
      ⚠️ as_of 에 기본값이 없다. 빠뜨리면 AsOfRequired 로 멈춘다

4. features/  (미구현)
      시세 → 기술적 지표 → X, y
      ⚠️ t 행은 t 시점까지의 자료만 쓴다 (look-ahead 금지)

5. evaluation/walk_forward.py
      확장창 또는 롤링창으로 폴드를 만든다
      ⚠️ 레이블이 k 일 앞을 보면 gap=k

6. models/  (미구현)
      폴드마다 학습 → 예측 방향
      ⚠️ 스케일링·하이퍼파라미터 탐색도 폴드 안에서

7. evaluation/metrics.py
      예측 → 포지션 (한 칸 밀어서!) → 거래비용 차감 → MDD·Sharpe

8. evaluation/baseline.py
      기준선 3종을 같은 폴드에서 계산해 나란히 놓는다

9. 결과를 파일로 (JSON · parquet)
      Streamlit 이 그 파일을 읽는다. 화면은 모델을 부르지 않는다
```

### 이 길에서 조용히 틀리는 다섯 곳

| 단계 | 사고 | 증상 | 실측 |
|---|---|---|---|
| 3 | `as_of` 를 안 넘김 | 오늘 아는 값이 과거에 섞인다 | `AsOfRequired` 로 **멈춤** ✅ |
| 4 | 지표가 미래를 참조 | 성능이 부풀어 오른다 | **에러 없음** |
| 4 | 레이블을 시가(t)→시가(t+5) 로 정렬 | 그날 장중 수익이 라벨에 들어간다 | 상관이 **정확히 10.0배** (+0.1709 대 +0.0171) |
| 4 | 종목의 거래정지를 행 번호로 건너뜀 | 5일 수익 크기가 부풀려진다 | E\|5일수익\| **4.781% → 4.489%** |
| 5 | `gap` 미설정 | 레이블이 학습에 샌다 | **에러 없음** |
| 7 | 포지션을 안 밀음 | 정확도 60%가 연 300%를 번다 | **에러 없음** |

3번만 예외가 납니다. 나머지는 전부 조용히 지나갑니다.
**테스트와 코드 리뷰가 유일한 안전망입니다.**

> 아래 두 줄은 의견이 아니라 이 저장소에서 실제로 잰 값입니다. 재현:
> `python scripts/measure_horizon.py` · `python scripts/measure_stock_horizon.py`

---

## 6. 실행 환경

### 로컬이 기본

| 작업 | 실행처 | 근거 |
|---|---|---|
| LightGBM 학습·그리드 | **로컬** | 배포판이 GPU 빌드가 아니다. 코어 수만 좌우 |
| sklearn RF·보정·bootstrap | **로컬** | CPU 경로 |
| 전처리·피처·EDA | **로컬** | I/O 바운드이고 원자료가 로컬에 있다 |
| 딥러닝(⑥) | Colab Pro | GPU 이득이 실재 |

로컬은 22코어입니다. CPU 바운드 작업에서 Colab 런타임보다 빠릅니다.
**"Colab 이니까 빠르겠지"로 판단하지 않습니다.**

### 코드는 언제나 로컬이 정본

Colab 에서 고쳤으면 곧바로 로컬 파일에 되씁니다. Colab VM 안에만 남은 결과물은
런타임이 끊기면 사라지고 git 이력과 갈라집니다.

원자료는 Colab 에 올리지 않습니다. 전처리를 로컬에서 마친 뒤 **학습에 필요한 최소
컬럼만** 내보냅니다.

---

## 7. v1.0 이후 닫힌 것

v1.0 이 "미정" 으로 남겼던 넷 중 셋이 닫혔습니다.

| v1.0 의 물음 | 결론 |
|---|---|
| 저장소를 팀 Supabase 로 할 것인가 | **안 씁니다.** SQLite 하나. MVP 단계에서 배포·클라우드를 쓰지 않기로 팀이 정했습니다 |
| SQLite·Postgres 이중 경로를 유지할 것인가 | **SQLite 하나.** Postgres 경로 약 1,524줄은 죽은 코드입니다 |
| 대시보드가 `api/` 를 부를 것인가, 파일을 읽을 것인가 | **파일을 읽습니다.** Streamlit 이 산출 JSON·parquet 을 읽습니다. 모델을 부르지 않아 시연이 안 정적입니다 |
| `pipelines/` 의 진입점 모양 | **아직 미정** — 킥오프 안건 |

> ⚠️ **Postgres 코드를 지우면 안 됩니다.** `ingest/store/krx_store.py:595` 가
> postgres 분기 **밖에서** `krx_pg.CODE_PATTERN` 을 씁니다. 정리하다가 종목명 검색이
> 조용히 죽습니다. 지우려면 그 상수를 먼저 옮겨야 합니다.

## 8. 아직 정해지지 않은 것

- `pipelines/` 의 진입점을 어떤 모양으로 할 것인가 (CLI · invoke · make)
- 산업 분류 기준 — KRX 업종 / GICS / 직접 매핑
  (수업 `06-data-crawling/7` 이 KRX 업종분류·WICS 를 이미 수집합니다)
- 뉴스 제목·요약을 SQLite 에 영속 저장해도 되는가
  — 네이버 약관 7.3 ③ 이 "저장(캐시 행위 포함)" 을 금지합니다. **법적 판단이라 단독 결론을 내지 않습니다**

👉 [docs/회의안건/2026-09-01-킥오프.md](../../회의안건/2026-09-01-킥오프.md)
